--- a/src/components/modules/AnchorNavigation.astro
+++ b/src/components/modules/AnchorNavigation.astro
@@ -8,7 +8,7 @@
         after:content-[''] after:absolute after:bottom-0 after:left-0 after:right-0 after:border-t after:border-gray-300 after:w-screen
         ">
             <li>
-                <a href="#services" class="block flex items-center py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">
+                <a href="#services" title="Schwerpunkte" class="block flex items-center py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">
                     <svg class="mr-10 w-26 h-26" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 32 32">
                         <path fill="currentColor" d="M21 3c-4.43 0-8 3.57-8 8c0 .235.037.553.063.844L4.5 20.406a5 5 0 0 0 0 7.094a5 5 0 0 0 7.094 0l8.562-8.563c.29.026.61.063.844.063c4.43 0 8-3.57 8-8a7.597 7.597 0 0 0-.938-3.688l-.625-1.156l-.937.938l-4.313 4.28l-1.562-1.562l4.28-4.312l.94-.938l-1.157-.625A7.618 7.618 0 0 0 21 3zm0 2c.486 0 .848.21 1.28.313l-3.78 3.78l-.72.72l.72.687l3 3l.688.72l.718-.72l3.782-3.78c.103.432.312.794.312 1.28c0 3.37-2.63 6-6 6c-.4 0-.72 0-.97-.063l-.53-.156l-.406.407l-8.907 8.907c-1.23 1.23-3.05 1.23-4.28 0l-.032-.032c-1.2-1.23-1.19-3.03.03-4.25l8.907-8.906l.407-.406l-.158-.53c-.06-.25-.062-.57-.062-.97c0-3.37 2.63-6 6-6z"/>
                     </svg>
@@ -16,7 +16,7 @@
                 </a>
             </li>
             <li>
-                <a href="#skills" class="block flex items-center py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">
+                <a href="#skills" title="Kompetenzen" class="block flex items-center py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">
                     <svg class="mr-10 w-26 h-26" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 32 32">
                         <path fill="currentColor" d="M20 10h-8V8h8zm-3 18H6v-4h2v-2H6v-5h2v-2H6v-5h2V8H6V4h18v15h2V4c0-1.1-.9-2-2-2H6c-1.1 0-2 .9-2 2v4H2v2h2v5H2v2h2v5H2v2h2v4c0 1.1.9 2 2 2h11zm3-13h-8v2h8zm3.4 9.3l-3.7.5l2.7 2.6l-.7 3.6l3.4-1.7l3.2 1.7l-.7-3.6l2.7-2.6l-3.6-.5L25 21z"/>
                     </svg>
@@ -24,7 +24,7 @@
                 </a>
             </li>
             <li>
-                <a href="#short-facts" class="block flex items-center py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">
+                <a href="#short-facts" title="Kennzahlen" class="block flex items-center py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">
                     <svg class="mr-10 w-26 h-26" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24">
                         <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10V3L6 5m0 11a2 2 0 1 1 4 0c0 .591-.601 1.46-1 2l-3 3h4m5-7a2 2 0 1 0 2-2a2 2 0 1 0-2-2m-8.5 0h3"/>
                     </svg>
@@ -32,7 +32,7 @@
                 </a>
             </li>
             <li>
-                <a href="#lebenslauf" class="block flex items-center py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">
+                <a href="#lebenslauf" title="Lebenslauf" class="block flex items-center py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">
                     <svg class="mr-10 w-26 h-26" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 20 20">
                         <path fill="currentColor" d="M3.5 3A1.5 1.5 0 0 0 2 4.5v4A1.5 1.5 0 0 0 3.5 10h9A1.5 1.5 0 0 0 14 8.5v-4A1.5 1.5 0 0 0 12.5 3h-9ZM3 4.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5v-4Zm.5 6.5A1.5 1.5 0 0 0 2 12.5v4A1.5 1.5 0 0 0 3.5 18h9a1.5 1.5 0 0 0 1.5-1.5v-4a1.5 1.5 0 0 0-1.5-1.5h-9ZM3 12.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5v-4Zm14-.063a2.003 2.003 0 0 1-2.5-1.937A2 2 0 0 1 16 8.563a2.005 2.005 0 0 1 1 0a2 2 0 0 1 0 3.874ZM16.5 3a.5.5 0 0 1 .5.5v4.041a3.02 3.02 0 0 0-1 0V3.5a.5.5 0 0 1 .5-.5Zm0 10.5c-.17 0-.337-.014-.5-.041V17.5a.5.5 0 0 0 1 0v-4.041c-.163.027-.33.041-.5.041Z"/>
                     </svg>
