--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -32,9 +32,9 @@ import Flag from "@components/partials/Flag.astro";
                             }
                         ]}
                         loading="eager"
-                        className="scale-105"
+                        className="scale-100"
                         fetchPriority="high"
-                        alt="Portrait von Marvin Schmidt, Senior Frontend Developer und Frontend Architect."
+                        alt="Schwarz-weißes Porträt einer Person mit kurzem, leicht gewelltem Haar, direktem Blick und ruhigem Ausdruck vor hellem, neutralem Hintergrund."
                     />
                 </div>
             </div>
@@ -50,7 +50,7 @@ import Flag from "@components/partials/Flag.astro";
                 entwickle ich moderne Web-Erlebnisse –
                 <em>minimalistisch gedacht</em>, <em>detailverliebt umgesetzt</em>.
             </p>
-            <Button href="#kontakt" className="mt-18 lg:mt-28" icon="send" data-scroll-reveal>Anschreiben</Button>
+            <Button href="#kontakt" title="Zum Kontaktformular" className="mt-18 lg:mt-28" icon="send" data-scroll-reveal>Anschreiben</Button>
         </div>
     </div>
 </section>
