--- a/src/components/base/SiteFooter.astro
+++ b/src/components/base/SiteFooter.astro
@@ -11,7 +11,7 @@ const version = import.meta.env.PUBLIC_APP_VERSION?.slice(0, 3);
     <div class="grid relative lg:items-between">
         <div class="col-span-6 mb-30 lg:mb-0 lg:col-span-4 lg:row-span-2">
             <div class="h2 text-64 leading-66 lg:text-112 lg:leading-110 font-extrabold bg-[url('/images/rainbow-vortex.svg')] bg-animate bg-cover bg-clip-text text-transparent">
-                Hast du eine Idee?
+                Du <br> hast <br> eine <br> Idee?
             </div>
         </div>
         <div class="col-span-6 lg:col-span-4 lg:col-start-6 pt-9">
@@ -22,17 +22,17 @@ const version = import.meta.env.PUBLIC_APP_VERSION?.slice(0, 3);
             <form name="contact" method="POST" data-form-validation netlify class="form-validation" action="/nachricht-verschickt">
                 <Input type="email" name="email" required={true} label="E-Mail-Adresse:" errorMessage="Pflichtfeld" />
                 <Textarea name="message" required={true} label="Nachricht:" errorMessage="Deine Nachricht ist zu kurz" />
-                <Button className="mt-28 lg:mt-28" icon="send" type="submit">Abschicken</Button>
+                <Button className="mt-28 lg:mt-28" icon="send" type="submit" title="Nachricht abschicken">Abschicken</Button>
             </form>
         </div>
         <div class="mt-70 lg:flex lg:items-end col-span-6 lg:col-span-7 lg:col-start-6">
             <nav class="lg:w-1/2 text-left">
                 <ul class="flex lg:justify-start pb-5">
                     <li  class="mr-20 lg:mx-20 lg:ml-0">
-                        <a class="inline-block text-18 leading-38" href="/impressum">Impressum</a>
+                        <a class="inline-block text-18 leading-38" href="/impressum" title="Zur Seite Impressum">Impressum</a>
                     </li>
                     <li  class="lg:mx-20 lg:mx-0">
-                        <a class="inline-block text-18 leading-38" href="/datenschutz">Datenschutzrichtlinien</a>
+                        <a class="inline-block text-18 leading-38" href="/datenschutz" title="Zur Seite Datenschutzrichtlinien">Datenschutzrichtlinien</a>
                     </li>
                 </ul>
             </nav>
