--- a/src/components/partials/Accordion.astro
+++ b/src/components/partials/Accordion.astro
@@ -1,6 +1,7 @@
 ---
 const {
     className = '',
+    title = '',
     openInitially = false
 } = Astro.props;
 
@@ -21,7 +22,7 @@ const randomId = generateRandomString();
 
 <div data-accordion data-accordion-initially-open={openInitially} class=`accordion lg:w-auto lg:h-644 lg:flex ${className}`>
 
-    <button data-accordion-button aria-controls={randomId} class="w-full py-20 cursor-pointer text-left text-25 leading-25 lg:text-36 lg:leading-36 lg:h-full relative lg:h-644 lg:w-98">
+    <button data-accordion-button title={title} aria-controls={randomId} class="w-full py-20 cursor-pointer text-left text-25 leading-25 lg:text-36 lg:leading-36 lg:h-full relative lg:h-644 lg:w-98">
         <span class="relative block lg:-rotate-90 lg:w-644 lg:h-98 lg:leading-98 lg:whitespace-nowrap lg:absolute lg:bottom-0 lg:left-0 lg:origin-bottom-left lg:translate-x-98"><slot name="title"></slot></span>
 
         <span data-accordion-icon class=`transition-transform absolute top-20 right-14 lg:top-20 lg:left-35 lg:right-auto`></span>
