updated meta tags

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,19 +49,19 @@ const currentPageUrl = Astro.url;
             <meta name="robots" content="noindex, nofollow">
         }
         <meta name="title" content={title}>
-		<meta name="description" content="Mit Fokus auf Performance, Accessibility und sauberen Code entwickle ich Web-Erlebnisse, die Nutzer lieben und Unternehmen voranbringen – minimalistisch gedacht, detailverliebt umgesetzt, vom Design bis zur fertigen Website.">
+		<meta name="description" content="Mit Fokus auf Performance, Accessibility und sauberen Code entwickle ich moderne Web-Erlebnisse – minimalistisch gedacht, detailverliebt umgesetzt.">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 		<meta name="generator" content={Astro.generator}>
         <meta http-equiv="Content-Security-Policy" content="font-src 'self';">
 
         <meta property="og:title" content="Marvin Schmidt - Frontend Developer">
-        <meta property="og:description" content="Mit Fokus auf Performance, Accessibility und sauberen Code entwickle ich Web-Erlebnisse, die Nutzer lieben und Unternehmen voranbringen – minimalistisch gedacht, detailverliebt umgesetzt, vom Design bis zur fertigen Website.">
+        <meta property="og:description" content="Mit Fokus auf Performance, Accessibility und sauberen Code entwickle ich moderne Web-Erlebnisse – minimalistisch gedacht, detailverliebt umgesetzt.">
         <meta property="og:type" content="website">
         <meta property="og:url" content={import.meta.env.PUBLIC_PAGE_URL}>
         <meta property="og:image" content=`${import.meta.env.PUBLIC_PAGE_URL}/share-image.png`>
 
         <meta name="twitter:title" content="Marvin Schmidt - Frontend Developer">
-        <meta name="twitter:description" content="Mit Fokus auf Performance, Accessibility und sauberen Code entwickle ich Web-Erlebnisse, die Nutzer lieben und Unternehmen voranbringen – minimalistisch gedacht, detailverliebt umgesetzt, vom Design bis zur fertigen Website.">
+        <meta name="twitter:description" content="Mit Fokus auf Performance, Accessibility und sauberen Code entwickle ich moderne Web-Erlebnisse – minimalistisch gedacht, detailverliebt umgesetzt.">
         <meta name="twitter:image" content=`${import.meta.env.PUBLIC_PAGE_URL}/share-image.png`>
         <meta name="twitter:card" content="summary">
 
@@ -105,7 +105,7 @@ const currentPageUrl = Astro.url;
                     "Frontend Architect",
                     "Senior Frontend Developer"
                 ],
-                "description": "Frontend Architect mit Fokus auf Performance, Accessibility und sauberen Code. Unterstützung von Strategie über Design und Entwicklung bis SEO-Optimierung und langfristiger Betreuung.",
+                "description": "Senior Frontend Developer mit Fokus auf Performance, Accessibility und sauberen Code entwickle ich moderne Web-Erlebnisse – minimalistisch gedacht, detailverliebt umgesetzt.",
                 "url": "https://marvin-schmidt-codes.website",
                 "image": "https://marvin-schmidt-codes.website/share-image.png",
                 "sameAs": [
