updated ld json

--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -4,7 +4,7 @@ import Button from "@components/partials/Button.astro";
 import Flag from "@components/partials/Flag.astro";
 ---
 
-<section class="hero-intro module !mb-95 lg:!mb-160" aria-labelledby="hero-intro-title" data-hero-intro role="region">
+<section class="hero-intro module !mb-95 lg:!mb-160" aria-labelledby="hero-intro-title" data-hero-intro role="region" id="person">
     <div class="grid lg:items-center">
         <figure class="col-span-5 lg:col-span-4 lg:col-start-2" data-scroll-reveal>
             <div class="relative -left-10 w-[calc(100%+10px)] lg:left-0 lg:w-full [clip-path:polygon(85%_0%,_100%_50%,_85%_100%,_0%_100%,_15%_50%,_0%_0%)]">
