updated index page title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import ShortFacts from "@components/modules/ShortFacts.astro";
 import Services from "@components/modules/Services.astro";
 ---
 
-<Layout title="Marvin Schmidt - Frontend Developer für moderne Webprojekte">
+<Layout title="Marvin Schmidt - Senior Frontend Developer für moderne Webprojekte">
     <HeroIntro />
     <AnchorNavigation />
     <Services/>
