--- a/src/components/base/SiteFooter.astro
+++ b/src/components/base/SiteFooter.astro
@@ -11,7 +11,7 @@ const version = import.meta.env.PUBLIC_APP_VERSION?.slice(0, 3);
     <div class="grid relative lg:items-between">
         <div class="col-span-6 mb-30 lg:mb-0 lg:col-span-4 lg:row-span-2">
             <div class="h2 text-64 leading-66 lg:text-112 lg:leading-110 font-extrabold bg-[url('/images/rainbow-vortex.svg')] bg-animate bg-cover bg-clip-text text-transparent">
-                Du <br> hast <br> eine <br> Idee?
+                Du  <br class="hidden lg:block"> hast  eine  Idee?
             </div>
         </div>
         <div class="col-span-6 lg:col-span-4 lg:col-start-6 pt-9">
