--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -42,6 +42,7 @@ import Flag from "@components/partials/Flag.astro";
         <div class="col-span-5 mt-30 lg:col-start-7 lg:mt-0">
             <Flag>Über mich</Flag>
             <h1 class="text-green mb-15 bg-gradient-to-r from-green to-red bg-clip-text text-transparent" id="hero-intro-title" data-scroll-reveal>
+                <span>Senior </span>
                 <span>Frontend </span>
                 <span>Architect.</span>
             </h1>
