updated meta tags

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -104,7 +104,8 @@ const currentPageUrl = Astro.url;
                     "name": "Marvin Schmidt",
                     "jobTitle": [
                             "Frontend Architect",
-                            "Senior Frontend Developer"
+                            "Senior Frontend Developer",
+                        "Web Developer"
                     ],
                     "description": "Senior Frontend Developer und Architect mit Fokus auf Performance, Accessibility und sauberen Code.",
                     "url": "https://marvin-schmidt-codes.website",
